integrate register method

--- a/server/.env
+++ b/server/.env
@@ -16,8 +16,8 @@ CLOUDINARY_API_KEY=your_cloudinary_api_key
 CLOUDINARY_API_SECRET=your_cloudinary_api_secret
 
 # Email Configuration (replace with your actual credentials)
-EMAIL_USER=your_email@gmail.com
-EMAIL_PASS=your_email_password
+EMAIL_USER=chanakaprasath456@gmail.com
+EMAIL_PASS=kysg mtyb hhez ojve
 
 # Payment Gateway Configuration (replace with your actual credentials)
 RAZORPAY_KEY_ID=your_razorpay_key_id
