--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.12.2",
+    "axios": "^1.13.2",
     "bootstrap": "^4.1.3",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
@@ -31,6 +31,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
     "react-swipeable-views": "^0.14.0",
+    "sonner": "^2.0.7",
     "styled-components": "^6.1.8",
     "swiper": "^11.1.0",
     "three": "^0.169.0",
