--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-event-listener": "^0.6.6",
+    "react-hook-form": "^7.71.1",
     "react-icons": "^5.0.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-inner-image-zoom": "^3.0.2",
