--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "firebase": "^11.2.0",
+    "framer-motion": "^12.31.0",
     "google-auth-library": "^10.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
