fix the reset password issue

--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,8 @@
 # Database Configuration
 CONNECTION_STRING=mongodb+srv://chanakarajapaksha:naAzUBsuVwcS77Au@cluster0.vl5l8j7.mongodb.net/marketplace?appName=Cluster0
 
+#Frontend URL
+FRONTEND_URL=http://localhost:3006
 # Server Configuration
 PORT=5000
 
