--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
     "react-swipeable-views": "^0.14.0",
+    "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "styled-components": "^6.1.8",
     "swiper": "^11.1.0",
